# wordle-bot

./: .gitignore  Cargo.toml  official.txt
src/: guess.rs  main.rs  mcts.rs  word.rs
