[package]
name = "wordle-bot"
version = "0.1.0"
edition = "2021"
author = "Hieu Nguyen"
about = "Play Wordle optimally"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
rand = { version = "0.8.4" }